--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
      <title>Comment API</title>
      <script src="https://kit.fontawesome.com/9a0449aea6.js" crossorigin="anonymous"></script>
      <style>
+          @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap");
           .text {
                text-align: center;
           }
